--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <form id="foodForm">
             <label for="foodInput">Enter food options (separated by commas):</label>
             <input type="text" id="foodInput" placeholder="e.g., Pizza, Burger, Salad">
+            <button type="button" id="saveButton">Save Food List</button>
             <button type="button" id="generateButton">Generate Random Food</button>
         </form>
         <div id="result"></div>
