--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             <button type="button" id="saveButton">Save Food List</button>
             <button type="button" id="generateButton">Generate Random Food</button>
         </form>
+        <div id="foodListContainer">
+            <h2>Current Food List:</h2>
+            <ul id="foodList"></ul>
+        </div>
         <div id="result"></div>
     </div>
     <script src="script.js"></script>
