--- a/index.html
+++ b/index.html
@@ -3,24 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Selector</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Food List App</title>
+    <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore.js"></script>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        input, button { margin: 5px; }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Food Selector</h1>
-        <form id="foodForm">
-            <label for="foodInput">Enter food options (separated by commas):</label>
-            <input type="text" id="foodInput" placeholder="e.g., Pizza, Burger, Salad">
-            <button type="button" id="saveButton">Save Food List</button>
-            <button type="button" id="generateButton">Generate Random Food</button>
-        </form>
-        <div id="foodListContainer">
-            <h2>Current Food List:</h2>
-            <ul id="foodList"></ul>
-        </div>
-        <div id="result"></div>
-    </div>
-    <script src="script.js"></script>
+    <h1>Food List App</h1>
+    <input type="text" id="foodInput" placeholder="Enter food item">
+    <button onclick="addFood()">Add Food</button>
+    <button onclick="generateRandomFood()">Generate Random Food</button>
+    
+    <h2>Food Items</h2>
+    <ul id="foodList"></ul>
+    
+    <h2>Random Food</h2>
+    <p id="randomFood"></p>
+
+    <script>
+        // Your Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyBP74yHtSWFEnlskxUTfczXbYo20zw4ucU",
+            authDomain: "fooditem-5b8ae.firebaseapp.com",
+            projectId: "fooditem-5b8ae",
+            storageBucket: "fooditem-5b8ae.appspot.com",
+            messagingSenderId: "134587137502",
+            appId: "1:134587137502:web:4fc3b024de982d3ac7314f"
+        };
+
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+
+        // Add food item to the Firestore database
+        async function addFood() {
+            const foodItem = document.getElementById('foodInput').value.trim();
+            if (foodItem) {
+                await db.collection('foods').add({
+                    name: foodItem,
+                    timestamp: firebase.firestore.FieldValue.serverTimestamp()
+                });
+                document.getElementById('foodInput').value = '';
+                loadFoods();
+            }
+        }
+
+        // Load food items from Firestore and display them
+        async function loadFoods() {
+            const foodList = document.getElementById('foodList');
+            foodList.innerHTML = '';
+            const snapshot = await db.collection('foods').orderBy('timestamp').get();
+            snapshot.forEach(doc => {
+                const li = document.createElement('li');
+                li.textContent = doc.data().name;
+                foodList.appendChild(li);
+            });
+        }
+
+        // Generate a random food item from the list
+        async function generateRandomFood() {
+            const snapshot = await db.collection('foods').get();
+            const foods = snapshot.docs.map(doc => doc.data().name);
+            if (foods.length > 0) {
+                const randomFood = foods[Math.floor(Math.random() * foods.length)];
+                document.getElementById('randomFood').textContent = randomFood;
+            } else {
+                document.getElementById('randomFood').textContent = 'No food items available.';
+            }
+        }
+
+        // Initial load
+        loadFoods();
+    </script>
 </body>
 </html>
