--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
     <script>
         // Your Firebase configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyBP74yHtSWFEnlskxUTfczXbYo20zw4ucU",
-            authDomain: "fooditem-5b8ae.firebaseapp.com",
-            projectId: "fooditem-5b8ae",
-            storageBucket: "fooditem-5b8ae.appspot.com",
-            messagingSenderId: "134587137502",
-            appId: "1:134587137502:web:4fc3b024de982d3ac7314f"
+          apiKey: "AIzaSyBP74yHtSWFEnlskxUTfczXbYo20zw4ucU",
+          authDomain: "fooditem-5b8ae.firebaseapp.com",
+          projectId: "fooditem-5b8ae",
+          storageBucket: "fooditem-5b8ae.appspot.com",
+          messagingSenderId: "134587137502",
+          appId: "1:134587137502:web:682f088e661ade80c7314f",
+          measurementId: "G-WSGRMPPVTW"
         };
 
         // Initialize Firebase
