--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food List App</title>
+    <title>Food store List App</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Firebase SDKs -->
     <script type="module" src="app.js"></script>
 </head>
 <body>
     <h1>Food List App</h1>
-    <input type="text" id="foodInput" placeholder="Enter food item">
-    <button id="addFoodButton">Add Food</button>
-    <button id="generateRandomFoodButton">Generate Random Food</button>
+    <input type="text" id="foodInput" placeholder="Enter name of store">
+    <button id="addFoodButton">Add to list</button>
+    <button id="generateRandomFoodButton">What shall we eat today?/button>
     
-    <h2>Food Items</h2>
+    <h2>List of stores</h2>
     <ul id="foodList"></ul>
     
-    <h2>Random Food</h2>
+    <h2>Today is a day to visit...</h2>
     <p id="randomFood"></p>
 </body>
 </html>
