--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Food List App</h1>
     <input type="text" id="foodInput" placeholder="Enter name of store">
     <button id="addFoodButton">Add to list</button>
-    <button id="generateRandomFoodButton">What shall we eat today/button>
+    <button id="generateRandomFoodButton">What shall we eat today?</button>
     
     <h2>List of stores</h2>
     <ul id="foodList"></ul>
