--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food store List App</title>
+    <title>JR Food store List App</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Firebase SDKs -->
     <script type="module" src="app.js"></script>
 </head>
 <body>
-    <h1>Food List App</h1>
+    <h1>JR Food List App</h1>
     <input type="text" id="foodInput" placeholder="Enter name of store">
     <button id="addFoodButton">Add to list</button>
     <button id="generateRandomFoodButton">What shall we eat today?</button>
