--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
     
     <input type="text" id="foodInput" placeholder="Enter name of store">
     <select id="categoryDropdown">
-        <option value="">Select Category</option>
+        <option value="">Select Cuisine</option>
         <option value="Dessert">Dessert</option>
-        <option value="Japanese Mains">Japanese Mains</option>
-        <option value="Asian Mains">Asian Mains</option>
+        <option value="Japanese Mains">Japanese Cuisine</option>
+        <option value="Asian Mains">Asian Cuisine</option>
+        <option value="Western Mains">Western Cuisine</option>
+        <option value="Western Mains">Korean Cuisine</option>
         <!-- Add more categories as needed -->
     </select>
     <button id="addFoodButton">Add to list</button>
     
-    <label for="categoryFilter">Filter by category:</label>
+    <label for="categoryFilter">Filter:</label>
     <select id="categoryFilter">
         <option value="">All</option>
         <!-- Options will be dynamically populated by JavaScript -->
