--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
     
     <input type="text" id="foodInput" placeholder="Enter name of store">
     <select id="categoryDropdown">
-        <option value="">Select Cuisine</option>
+        <option value="">Select Category</option>
         <option value="Dessert">Dessert</option>
-        <option value="Japanese Mains">Japanese Cuisine</option>
-        <option value="Asian Mains">Asian Cuisine</option>
-        <option value="Western Mains">Western Cuisine</option>
-        <option value="Western Mains">Korean Cuisine</option>
-        <!-- Add more categories as needed -->
+        <option value="Japanese Cuisine">Japanese Cuisine</option>
+        <option value="Western Cuisine">Western Cuisine</option>
+        <option value="Asian Cuisine">Asian Cuisine</option>
+        <option value="Korean Cuisine">Korean Cuisine</option>
     </select>
     <button id="addFoodButton">Add to list</button>
     
