--- a/index.html
+++ b/index.html
@@ -18,12 +18,19 @@
         <option value="Western Cuisine">Western Cuisine</option>
         <option value="Asian Cuisine">Asian Cuisine</option>
         <option value="Korean Cuisine">Korean Cuisine</option>
+        <option value="Others">Others</option>
     </select>
     <button id="addFoodButton">Add to list</button>
     
-    <label for="categoryFilter">Filter:</label>
+    <label for="categoryFilter">Filter by category:</label>
     <select id="categoryFilter">
         <option value="">All</option>
+        <option value="Dessert">Dessert</option>
+        <option value="Japanese Cuisine">Japanese Cuisine</option>
+        <option value="Western Cuisine">Western Cuisine</option>
+        <option value="Asian Cuisine">Asian Cuisine</option>
+        <option value="Korean Cuisine">Korean Cuisine</option>
+        <option value="Others">Others</option>
         <!-- Options will be dynamically populated by JavaScript -->
     </select>
     
